- Add gateway: 2Checkout
- Add an admin notice when no payment gateway is active but paid memberships exist
- Improve payment logs to display additional information for errors
- Improve the layout of the coupon fields during in the payment form
- Fix possible memory issue that happened when updating the plugin
- Fix the invitation code Add-on (integration in payment form was not working)

1.0.0.8
----------------------------------------------------------------------
- Add new option to customize which users are considered Admin users (details in the Help > Advanced page)
- Fix a typo in the PayPal Single gateway that caused M2 to ignore some payment information
- Fix bugs that prevented removing protection from individual posts or pages
- Fix the search function on the Members page
- Fix two possible infinite loops that resulted in timeouts or rule values not being saved
- Fix wrong protection logic of the Admin Side Add-on
- Fix wrong protection logic of the Advanced Menu Add-on
- Fix small issue that did not correctly disable the Media Add-on
- Fix a wrong parameters that limited search results of list tables to 5 items in some cases
- Fix the description text of the ms-protected-content shortcode for admin users
- Fix a typo in the ms_rule_has_access filter
- Fix a possible/rare mis-configuration that could happen on single-site installations

1.0.0.7
----------------------------------------------------------------------
- Improve Transaction logs to also log inactice or invalid gateway calls
- Fix issue that did not display any "Page" rules in the Membership Overview screen
- Fix a critical bug that caused protection rules to be reset on plugin activation
- Fix the bulk actions in the Protecion Rules page
- Fix wrong WordPress action that was called in the user-registration form
- Fix rare error that happened when dripped content had no/invalid date settings
- Fix Members/Billings list to keep search filter when changing the sort option